<resources>
    <string name="app_name">ITEOnlineShop</string>
    <string name="home_navigation">Home</string>
    <string name="product_navigation">Product</string>
    <string name="profile_navigation">Profile</string>
    <string name="more_navigation">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_products">Search Products</string>
    <string name="product_title">Products</string>
    <string name="email_text">Email</string>
    <string name="number_text">Phone Number</string>
    <string name="gender_text">Gender</string>
    <string name="birthday_text">Birthday</string>
    <string name="address_text">Address</string>
    <string name="product_show">Show more</string>
    <string name="image_string">Image</string>
    <string name="buy_now">Buy Now</string>

    <!--    <sting name="price">%s</sting>-->
</resources>