<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/m10"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m60"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/m30"
                android:layout_height="@dimen/m30"
                android:layout_gravity="center"
                android:src="@drawable/fe" />

            <TextView
                android:id="@+id/toolbar_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="@dimen/s20" />

            <ImageView
                android:layout_width="@dimen/m30"
                android:layout_height="@dimen/m30"
                android:layout_gravity="center"
                android:src="@drawable/ic_profile" />
        </LinearLayout>


        <TextView
            android:layout_marginVertical="@dimen/m10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:textSize="@dimen/s16" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/preview_product"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m250"
            android:clipToPadding="false"
            tools:itemCount="10"
            tools:listitem="@layout/preview_product" />

        <TextView
            android:layout_marginVertical="@dimen/m10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_show"
            android:textSize="@dimen/s16" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            tools:itemCount="10"
            tools:listitem="@layout/product_list" />

    </LinearLayout>
</ScrollView>
