<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.ProductFragment">

<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/product_title"
            android:textSize="@dimen/s20" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m10"
        android:layout_marginTop="@dimen/m10"
        android:layout_marginEnd="@dimen/m10"
        android:layout_marginBottom="@dimen/m10"
        android:orientation="horizontal"
        android:background="@drawable/search">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/m10"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/image_string" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m10"
            android:hint="@string/search_products"
            android:layout_gravity="center"
            android:inputType="text"
            android:autofillHints="@string/search_products"
            android:textSize="@dimen/s20" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/m10"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/image_string" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        tools:itemCount="10"
        tools:listitem="@layout/product_list" />
</LinearLayout>