<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/toolbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile_navigation"
                android:textSize="@dimen/s20" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/container_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/m10"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/m10">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image_container"
                android:layout_width="@dimen/m100"
                android:layout_height="@dimen/m100"
                app:cardCornerRadius="@dimen/m100">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="@dimen/m100"
                    android:layout_height="@dimen/m100"
                    android:src="@drawable/ic_profile" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m10"
                    android:layout_marginTop="@dimen/m10"
                    tools:text="@string/product_title" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m10"
                    android:textColor="@color/grey"
                    tools:text="@string/email_text" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/m10"
                android:src="@drawable/ic_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/container_profile"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/m10"
            android:layout_marginStart="@dimen/m10"
            android:layout_marginTop="@dimen/m10"
            android:layout_marginEnd="@dimen/m10"
            android:layout_marginBottom="@dimen/m10"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/m10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m10"
                android:text="@string/email_text"
                android:textColor="@color/grey"
                android:textSize="@dimen/s16" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s16"
                tools:text="@string/email_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m10"
                android:text="@string/number_text"
                android:textColor="@color/grey"
                android:textSize="@dimen/s16" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s16"
                tools:text="@string/number_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m10"
                android:text="@string/gender_text"
                android:textColor="@color/grey"
                android:textSize="@dimen/s16" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s16"
                tools:text="@string/gender_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m10"
                android:text="@string/birthday_text"
                android:textColor="@color/grey"
                android:textSize="@dimen/s16" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s16"
                tools:text="@string/birthday_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m10"
                android:text="@string/address_text"
                android:textSize="@dimen/s16" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m10"
                android:background="@drawable/search"
                android:minHeight="@dimen/m100"
                android:padding="@dimen/m10"
                tools:text="@string/address_text"
                android:textSize="@dimen/s16" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
